--- a/sound_burner.html
+++ b/sound_burner.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <!-- добавляется для работы media-query -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>SoundBurner - площадка для музыкантов</title>
